<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/add_recipe_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="?attr/actionModeCloseDrawable"
        app:backgroundTint="#FFFFFF"
        android:contentDescription="@string/cancel_operation" />


    <EditText
        android:id="@+id/recipe_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_recipe_back_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:background="@drawable/description_border"
        android:hint="@string/recipe_name_hint"
        android:inputType="text"
        android:paddingStart="5dp"
        android:paddingTop="14dp"
        android:paddingBottom="20dp"
        android:textSize="16sp"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/recipe_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipe_name_field"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:focusable="true"
        android:paddingTop="6dp"
        android:scaleType="fitXY"
        android:src="@android:drawable/ic_menu_gallery"
        android:contentDescription="@string/recipe_image" />

    <EditText
        android:id="@+id/preparation_time_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipe_image_view"
        android:layout_alignParentStart="true"
        android:inputType="numberDecimal"
        android:background="@drawable/description_border"
        android:gravity="center"
        android:hint="@string/preparation_time_field_hint"
        android:autofillHints="0" />

    <EditText
        android:id="@+id/serving_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/preparation_time_field"
        android:inputType="number"
        android:background="@drawable/description_border"
        android:gravity="center"
        android:hint="@string/serving_field_hint"
        android:autofillHints="" />

    <EditText
        android:id="@+id/recipe_category_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/serving_field"
        android:gravity="center"
        android:hint="@string/recipe_category_field_hint"
        android:background="@drawable/description_border"
        android:autofillHints=""
        android:inputType="text" />

    <Button
        android:id="@+id/add_recipe_ingredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipe_category_field"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:text="@string/click_to_add_ingredient" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/recipe_recycler_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_recipe_ingredient">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/black"
            app:layout_constraintHeight="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/recipe_comment_label"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@id/recipe_recycler_view_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:text="@string/comments"
        android:textSize="10pt"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/recipe_comment_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recipe_comment_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/description_border"
        android:gravity="start"
        android:hint="@string/recipe_comment_field_hint"
        android:inputType="textMultiLine"
        android:maxLength="30"
        android:paddingStart="6dp"
        android:paddingTop="6dp"
        android:textSize="16sp"
        android:autofillHints=""
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/submit_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipe_comment_field"
        android:layout_marginTop="0dp"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:backgroundTint="#22AE66" />

</RelativeLayout>