<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/scale_mp_dialog_title"
        android:text="@string/scaling"
        android:textSize="8pt"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/scale_field"
        android:hint="@string/zero"
        android:inputType="numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scale_mp_dialog_title"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:autofillHints="servings" />

    <TextView
        android:id="@+id/meal_plan_spinner_title"
        android:text="@string/select_a_meal_plan"
        android:textSize="6pt"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/scale_field"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"/>

    <Spinner
        android:id="@+id/meal_plan_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/meal_plan_spinner_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/meal_plan_day_spinner_label"
        android:text="@string/selected_meal_plan_day"
        android:textSize="6pt"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/meal_plan_spinner"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <Spinner
        android:id="@+id/meal_plan_day_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/meal_plan_day_spinner_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/meal_spinner_label"
        android:text="@string/select_a_meal_in_the_selected_day"
        android:textSize="6pt"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/meal_plan_day_spinner"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <Spinner
        android:id="@+id/meal_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/meal_spinner_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/confirm_scaling"
        android:text="@string/confirm"
        android:textSize="6pt"
        android:backgroundTint="@color/teal_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/meal_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>